--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,10 @@ collections:
   pages:
     output: true
     permalink: /:path/
+
+exclude:
+  - README.md
+
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
